[package]
name = "insta_sentinel"
version = "1.4.2"
edition = "2021"

[dependencies]
# Browser Automation (Core)
headless_chrome = "1.0" 
base64 = "0.21"
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Error Handling
anyhow = "1.0"

# HTTP Client (For downloading images/videos)
reqwest = { version = "0.11", features = ["stream"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.0"
futures-util = "0.3"
