[package]
name = "stov"
version = "1.6.0"
edition = "2021"

[dependencies]
# Browser Automation
headless_chrome = "1.0" 
# Encoding
base64 = "0.21"
# Async Runtime
tokio = { version = "1", features = ["full"] }
# Error Handling
anyhow = "1.0"
# HTTP Client (Minimal use now, but kept for utils)
reqwest = { version = "0.11", features = ["stream"] }
# Serialization (JSON Profiles)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Utilities
rand = "0.8"
colored = "2.0"
futures-util = "0.3"
