[package]
name = "stov"
version = "2.7.4"
edition = "2021"

[dependencies]
headless_chrome = "1.0" 
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.0"
futures-util = "0.3"
